# tests-project

./: .pre-commit-config.yaml  README.md  docker-compose.yml  migrate_db.sh  reset.sh
backend/: .env.prod  Dockerfile  alembic.ini  dataloader.py  main.py  pyproject.toml  run_tests.sh  schemas.py  settings.py
backend/ai/: manager.py
backend/auth/: backends.py  dependencies.py  models.py  router.py  schemas.py
backend/chats/: admin.py  enums.py  factories.py  gpt_cost_calculator.py  models.py  router.py  schemas.py
backend/common/: custom_swagger.py  exceptions.py  factories.py  models.py  router.py  schemas.py  utils.py
backend/database/: engine.py  env.py
backend/database/versions/: 339a22e3f689_migrate.py  64bacaae8626_init.py  72585cc7bafd_add_hashed_password_column_to_user_table.py
backend/static/: swagger.css
backend/tests/: conftest.py  test_ai_manager.py  test_api.py  test_factory.py
backend/users/: admin.py  factories.py  manager.py  models.py  router.py  schemas.py
frontend/: .env.example  .eslintrc  .prettierrc  Dockerfile.dev  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  defaults.ts  hooks.ts  index.css  store.ts  theme.ts  types.ts
frontend/src/apps/auth/: index.ts  types.ts
frontend/src/apps/chat/: CreateChatValidationSchema.ts  api.ts  index.ts  types.ts
frontend/src/apps/user/: types.ts
frontend/src/apps/virtual-friend/: VirtualFriendValidationSchema.ts  api.ts  index.ts  types.ts
frontend/src/apps/welcome/: index.ts
frontend/src/assets/icons/: index.ts
frontend/src/design-system/: index.ts
frontend/src/design-system/Avatar/: Avatar.styles.ts  Avatar.tsx  types.ts
frontend/src/design-system/DisplayError/: DisplayError.styles.ts  DisplayError.tsx  index.ts  types.ts
frontend/src/design-system/Form/: Form.tsx  FormRenderProp.tsx
frontend/src/design-system/FormTextField/: FormTextField.tsx  index.ts
frontend/src/design-system/FormTextarea/: FormTextarea.styles.ts  FormTextarea.tsx  index.ts
frontend/src/design-system/HelperTip/: HelperTip.styles.ts  HelperTip.tsx  index.ts  types.ts
frontend/src/design-system/Link/: Link.tsx  StyledLink.ts  types.ts
frontend/src/design-system/Loader/: Loader.styles.ts  Loader.tsx
frontend/src/design-system/Logo/: Logo.styles.ts  Logo.tsx
frontend/src/design-system/PageContainer/: PageContainer.styles.ts  index.ts
frontend/src/design-system/TextField/: TextField.tsx
frontend/src/routes/: AppRoutes.tsx  RouterController.tsx  index.ts  pathMaker.ts  types.ts
frontend/src/routes/hooks/: index.ts  (+2 more)
frontend/src/utils/: generateModules.ts  index.ts
frontend/webpack/: sharedModules.js  webpack.common.js  webpack.dev.js  webpack.local.js  webpack.prod.js
(+53 files in other folders)
