[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["ALL"]
ignore = ["D", "ANN102", "PLR2004", "ANN101", "ERA001", "ANN401", "A003", "FIX002"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "database/versions",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.extend-per-file-ignores]
"tests/*" = ["S101", "ANN201"]
"**/factories.py" = ["S311"]

[tool.ruff.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator", "pydantic.validate_arguments"]

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tikhoniuk Eduard <edik.tikhoniuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.11.1"
asyncpg = "0.27.0"
authlib = "1.2.1"
bcrypt = "4.0.1"
boto3 = "1.26.152"
email-validator = "2.0.0.post2"
faiss-cpu = "1.7.4"
faker = "18.11.2"
fastapi = "0.98.0"
fastapi-login = "1.9.0"
fastapi-sqlalchemy = "0.2.1"
fastapi-users-db-sqlalchemy = "4.0.5"
fastapi-users-db-sqlmodel = "0.3.0"
fastapi-users = "11.0.0"
freezegun = "1.2.2"
httpx-oauth = "0.11.2"
httpx = "0.23.3"
ipdb = "0.13.13"
itsdangerous = "2.1.2"
lancedb = "0.1.6"
langchain = "0.0.217"
langchainplus-sdk = "0.0.17"
llama-index = "0.6.11"
numpy = "1.25.0"
openai = "0.27.7"
pgvector = "0.1.8"
polyfactory = "2.1.1"
psycopg2-binary = "2.9.5"
pydantic = "1.10.7"
pytest = "7.3.1"
python-multipart = "0.0.6"
requests-oauthlib = "1.3.1"
requests-toolbelt = "0.9.1"
requests = "2.28.2"
sqladmin = "0.13.0"
sqlalchemy2-stubs = "0.0.2a34"
sqlalchemy = "1.4.41"
sqlmodel = "0.0.8"
starlette = "0.27.0"
tiktoken = "0.4.0"
uvicorn = "0.22.0"
sentry-sdk = "^1.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
